kubeconfig/overlays/stage/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tic-tac-toe
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: tic-tac-toe.stage.codeheroes.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: tic-tac-toe-backend
              servicePort: api
  tls:
    - secretName: cloudflare-tls
